--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@bitget-wallet/aptos-wallet-adapter": "^0.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/vt323": "^5.0.15",
+    "@mizuwallet-sdk/core": "^1.3.2",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "@types/styled-components": "^5.1.34",
     "aptimus-sdk-test": "1.1.7",
     "aptos": "^1.21.0",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
@@ -42,7 +47,6 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
