--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.14.1",
+    "react-timer-hook": "^3.0.7",
     "react-unity-webgl": "^9.5.2",
     "styled-components": "^6.1.11"
   },
